Project/project1/test/t03_12012138.out
Error type A at Line 8: unknown lexeme 'wrong_char'
Error type A at Line 9: unknown lexeme '\xuu'
